# op-replay-clipper-desktop

./: .gitignore  CLAUDE.md  README.md  install.sh  package.json
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: installer-hooks.nsi
src-tauri/resources/: bootstrap.ps1  debug_bootstrap.bat
src-tauri/src/: constants.rs  env_sanitize.rs  ipc.rs  main.rs  paths.rs  platform.rs  server.rs  startup.rs  state.rs
src-tauri/src/bootstrap/: linux.rs  mod.rs  windows.rs
