[package]
name = "glidekit-desktop"
version = "0.1.0"
edition = "2021"
description = "Native desktop app for GlideKit"

[dependencies]
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
